# 3-tier-multi-agent-architecture

./: .cursorrules  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README  README.md  SECURITY.md  SUPPORTED_LLMS.md  basedpyrightconfig.json  compound-engineering.local.md  docker-compose.yml  execution_result.json  install.sh  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  verify_interactive.py
.agent/rules/: continuous-learning-agent.md  internet-research-agent.md  l1-orchestration.md  l2-sub-agent.md  l3-leaf-worker.md  system-verification-agent.md
.agent/workflows/: 3-tier-orchestration.md
.clinerules/hooks/: PostToolUse  PreCompact  TaskCancel  TaskComplete
.codellm/rules/: user_project_rules.mdc  workflow_rule.mdc  workspace_rules.mdc
.continue/: config.json
.cursor/: settings.json
.github/workflows/: ci.yml  docker-publish.yml
benchmarks/: run_benchmark.py
docs/architecture/: README.md  multi-agent-3-level-architecture.md  prompt-reconstruction.md
docs/benchmarks/: latest_results.md
docs/plans/: 2026-03-08-fix-clean-install-onboarding-validation-plan.md  2026-03-08-fix-provider-validation-local-oss-tier-plan.md  2026-03-08-fix-readme-clean-room-execution-fidelity-plan.md  2026-03-08-restore-deepseek-provider-compatibility-plan.md  2026-03-09-fix-codebase-review-debug-refactor-plan.md  2026-03-09-fix-mainline-ci-and-branch-consolidation-plan.md  2026-03-09-fix-pr-checks-build-and-test-plan.md  2026-03-09-fix-readme-clean-room-e2e-operational-readiness-plan.md  2026-03-09-fix-readme-preserve-look-and-feel-plan.md  2026-03-09-ship-duplicate-guard-to-main-plan.md
docs/reports/: Test_Summary_Report.md  api_key_validation_prompt.md  critical_analysis_report.md  improvement_plan.md  validation_report.json  validation_report.md.resolved
examples/: benchmark_1.md  benchmark_2_circular_dependency.md  benchmark_3_sub_agent_negotiation.md  benchmark_4_zero_tolerance.md
examples/general_llm/: main.py
scripts/: enforce_no_duplicates.py  integrate_crewai.sh  validate_runtime_env.py
src/: __init__.py
src/engine/: __init__.py  config_manager.py  context_builder.py  continuous_learning.py  crew_agents.py  crew_orchestrator.py  crewai_storage.py  duplicate_guard.py  exceptions.py  llm_config.py  llm_providers.py  logging_utils.py  macos_sandbox_compat.py  model_catalog.py  orchestration_api.py  orchestration_tools.py  project_root_tools.py  provider_circuit_breaker.py  provider_healthchecks.py  runtime_env.py  runtime_graph.py  semantic_healer.py  state_machine.py  status_banner.py  verification_agent.py  verification_primitives.py  workflow_primitives.py  workspace_tools.py
src/experimental/langgraph/: README.md  langgraph_orchestrator.py  models.py
src/orchestrator/: antigravity-cli.py  tier1_manager.py
src/python/: __init__.py  langgraph_orchestrator.py  models.py
src/utility/: __init__.py  mcp_executor.py
src/view/: __init__.py  a2ui_protocol.py
tests/: conftest.py  pytest.ini  test_architecture.py  test_capability_parity.py  test_cli_runtime.py  test_config_manager.py  test_contracts.py  test_crewai_integration.py  test_docker.sh  test_duplicate_guard.py  test_e2e.py  test_improvement_plan_workstreams.py  test_install_script.py  test_orchestration_hardening.py  test_provider_healthchecks.py  test_runtime_graph.py  test_validate_runtime_env.py
todos/: 001-complete-p1-arbitrary-command-execution-in-test-tools.md  002-complete-p1-runtime-config-workspace-escape.md  003-complete-p2-crewai-storage-cross-workspace-contamination.md  004-complete-p2-context-builder-full-tree-scan-overhead.md  005-complete-p3-verbose-flag-not-propagated.md  006-complete-p3-test-target-coverage-gap-for-new-workstream-tests.md  007-complete-p1-remove-legacy-provider-surfaces.md  008-complete-p1-readme-clean-room-validation-loop.md  008-ready-p1-readme-clean-room-validation-loop.md  009-complete-p1-a2ui-ack-state-not-consumed-by-view-agent.md  009-ready-p1-a2ui-ack-state-not-consumed-by-view-agent.md  010-complete-p1-runtime-config-tool-exposes-secrets.md  010-ready-p1-runtime-config-tool-exposes-secrets.md  011-complete-p1-unbounded-nested-orchestration-via-submit-objective-tool.md  011-ready-p1-unbounded-nested-orchestration-via-submit-objective-tool.md  012-complete-p2-ack-state-corruption-fallback-loses-existing-data.md  012-ready-p2-ack-state-corruption-fallback-loses-existing-data.md
