[project]
name = "antigravity-3tier-crewai"
version = "2.0.0"
description = "3-Tier Multi-Agent Architecture with CrewAI Integration"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.75.0,<0.76.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "ruamel.yaml>=0.17.32",
    "litellm>=1.15.0,<1.74",
    "tokenizers>=0.21.0",
    "tiktoken>=0.9.0",
    "pydantic>=2.4.0"
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.32.1",
    "pytest>=7.4.0",
    "pytest-cov>=7.0.0",
    "black",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0"
]
experimental = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "pydantic-ai>=0.0.13"
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "jupyter",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "node_modules", "__pycache__", ".pytest_cache"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "crewai",
    "crewai.*",
    "langgraph",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pyright]
include = [
  "src",
  "tests",
  "main.py",
  "benchmarks/run_benchmark.py",
  "examples/general_llm/main.py",
  "scripts/validate_runtime_env.py",
]
exclude = ["**/__pycache__", ".venv", "node_modules", ".git"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
executionEnvironments = [
  { root = ".", extraPaths = ["src"] },
  { root = "src", extraPaths = ["src"] },
  { root = "tests", extraPaths = ["src"] },
  { root = "benchmarks", extraPaths = ["src"] },
  { root = "examples", extraPaths = ["src"] },
  { root = "scripts", extraPaths = ["src"] },
]

[tool.basedpyright]
include = [
  "src",
  "tests",
  "main.py",
  "benchmarks/run_benchmark.py",
  "examples/general_llm/main.py",
  "scripts/validate_runtime_env.py",
]
exclude = ["**/__pycache__", ".venv", "node_modules", ".git"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
executionEnvironments = [
  { root = ".", extraPaths = ["src"] },
  { root = "src", extraPaths = ["src"] },
  { root = "tests", extraPaths = ["src"] },
  { root = "benchmarks", extraPaths = ["src"] },
  { root = "examples", extraPaths = ["src"] },
  { root = "scripts", extraPaths = ["src"] },
]
